--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 vendor
 .php-cs-fixer.cache
+tests/monorepo/packages/A/composer.lock
+tests/monorepo/packages/B/composer.lock
+tests/monorepo/packages/C/composer.lock
+tests/monorepo/composer.lock
