--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ vendor
 tests/monorepo/packages/A/composer.lock
 tests/monorepo/packages/B/composer.lock
 tests/monorepo/packages/C/composer.lock
+tests/replace/composer.lock
 tests/monorepo/composer.lock
